[package]
name = "reflected"
version = "0.3.0"
authors = []
description = "Upload and serve temporary files."
edition = "2018"

[dependencies]
env_logger = { version = "0.7", default-features = false, features = ["humantime"] }
http-body = "0.3"
hyper = "0.13"
log = "0.4"
memmap = "0.7"
structopt = { version = "0.3", default-features = false }
tempfile = "3.1"
tokio = { version = "0.2", features = ["fs", "stream", "sync"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
